<resources>
    <string name="app_name">DeAsa1.1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
</resources>