<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff7961"
    android:padding="35dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.RegistrationFragment">

    <LinearLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#F88875"
            android:hint="firstName"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#F88875"
            android:hint="lastName"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#F88875"
            android:hint="@string/email"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#F88875"
            android:hint="@string/password"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/registration"
            android:backgroundTint="#ba000d"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>